--- a/Interactive/bin/videoPlayer.fxml
+++ b/Interactive/bin/videoPlayer.fxml
@@ -3,34 +3,25 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.media.MediaView?>
-<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1">
-   <children>
-      <MediaView fitHeight="360.0" fitWidth="600.0" layoutX="227.0" layoutY="100.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Label layoutX="253.0" layoutY="282.0" text="Label" textFill="#ffe500" wrapText="true">
-         <effect>
-            <DropShadow height="23.97" radius="9.94" spread="0.47" width="17.79" />
-         </effect>
-         <font>
-            <Font name="System Bold" size="25.0" />
-         </font>
-      </Label>
-      <Pane layoutY="346.0" prefHeight="54.0" prefWidth="600.0" style="-fx-background-color: white;">
+<BorderPane maxHeight="400.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" scaleShape="false" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VideoPlayerController">
+   <bottom>
+      <Pane maxHeight="50.0" maxWidth="600.0" minHeight="50.0" minWidth="600.0" prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
-          <Button layoutX="14.0" layoutY="15.0" mnemonicParsing="false" text="Play" />
-            <Button layoutX="59.0" layoutY="15.0" mnemonicParsing="false" text="Stop" />
-            <Button layoutX="512.0" layoutY="15.0" mnemonicParsing="false" text="Full Screen" />
-            <Slider layoutX="74.0" layoutY="1.0" prefHeight="14.0" prefWidth="457.0" />
-            <Button layoutX="452.0" layoutY="15.0" mnemonicParsing="false" text="CC" />
-            <Slider layoutX="352.0" layoutY="21.0" prefHeight="14.0" prefWidth="86.0" />
-            <Label layoutX="14.0" layoutY="-1.0" text="0:00/0:00" />
+          <Button fx:id="play" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" onAction="#play" text="Play" />
+            <Button fx:id="stop" layoutX="59.0" layoutY="15.0" mnemonicParsing="false" onAction="#stop" text="Stop" />
+            <Button fx:id="fullscrn" layoutX="512.0" layoutY="15.0" mnemonicParsing="false" onAction="#setFullScreen" text="Full Screen" />
+            <Slider fx:id="ctrlbar" layoutX="74.0" layoutY="1.0" prefHeight="14.0" prefWidth="457.0" />
+            <Button fx:id="caption" layoutX="452.0" layoutY="15.0" mnemonicParsing="false" onAction="#captionOn" text="CC" />
+            <Slider fx:id="volume" layoutX="352.0" layoutY="21.0" prefHeight="14.0" prefWidth="86.0" />
+            <Label fx:id="timing" layoutX="14.0" layoutY="-1.0" text="0:00/0:00" />
          </children>
       </Pane>
-   </children>
-</AnchorPane>
+   </bottom>
+   <center>
+      <MediaView fx:id="mediaView" fitHeight="350.0" fitWidth="600.0" BorderPane.alignment="CENTER" />
+   </center>
+</BorderPane>
